--- a/src/app/views/main/main.component.html
+++ b/src/app/views/main/main.component.html
@@ -1,6 +1,5 @@
-<div
-  class="text-xs sm:text-base w-full h-full flex justify-center items-center">
-  <div class="max-w-4xl p-5 border border-black rounded-sm">
+<div class="w-full h-full flex justify-center items-center">
+  <div class="max-w-4xl min-w-[28rem] p-5 border border-black rounded-sm">
     <rp-add-item />
   </div>
 </div>
