--- a/src/app/views/list/list.component.html
+++ b/src/app/views/list/list.component.html
@@ -19,7 +19,7 @@
         >Unidad de medida</span
       >
       <span
-        class="col-span-4 sm:col-span-2 content-center border-b-2 border-r-2 border-black p-1 sm:p-2">
+        class="col-span-4 sm:col-span-2 content-center border-b-2 border-black p-1 sm:p-2">
         Unidad de medida
       </span>
 
