ci: Agregar item

--- a/src/app/views/list/list.component.html
+++ b/src/app/views/list/list.component.html
@@ -42,7 +42,9 @@
         >
         <div
           class="col-span-2 sm:col-span-1 content-center border-b-2 border-r-2 border-black p-1 sm:p-2">
-          <button class="p-2 w-full rounded-sm bg-yellow-400">
+          <button
+            class="p-2 w-full rounded-sm bg-yellow-400"
+            (click)="editHandler(item)">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
@@ -55,7 +57,9 @@
         </div>
         <div
           class="col-span-2 sm:col-span-1 content-center border-b-2 border-black p-1 sm:p-2">
-          <button class="p-2 w-full rounded-sm bg-red-500">
+          <button
+            class="p-2 w-full rounded-sm bg-red-500"
+            (click)="removeHandler(item)">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 20 20"
